tests/snapshots/help_snapshot__analyze_help.snap
---
source: tests/help_snapshot.rs
expression: "help(&[\"analyze\", \"--help\"])"
---
Analyze a program

Usage: gd analyze [OPTIONS]

Options:
      --program <PROGRAM>            
      --project <PROJECT>            
      --detach                       Return immediately, let bridge continue analysis in background
  -v, --verbose...                   Increase log verbosity printed to stdout (-v=warn, -vv=info, -vvv=debug)
  -q, --quiet                        Suppress non-essential output
      --json                         Output as JSON
      --pretty                       Output JSON with pretty formatting
      --projects-dir <PROJECTS_DIR>  Directory under which Ghidra projects are stored. Overrides config `ghidra_project_dir` and the default location. Note: Ghidra 12.1+ rejects paths containing a dot-prefixed component
      --java-home <JAVA_HOME>        Full JDK home for Ghidra to use (must be a JDK, not a JRE). Overrides config `java_home` and auto-detection
  -h, --help                         Print help
