tests/snapshots/help_snapshot__function_set_signature_help.snap
---
source: tests/help_snapshot.rs
expression: "help(&[\"function\", \"set-signature\", \"--help\"])"
---
Set function signature from C-style string

Usage: gd function set-signature [OPTIONS] --signature <SIGNATURE> [TARGET]

Arguments:
  [TARGET]  Target (name | 0xaddr | FUN_<hex>)

Options:
      --target <TARGET>              Target (name | 0xaddr | FUN_<hex>)
      --signature <SIGNATURE>        C-style signature string, e.g. "int main(int argc, char** argv)"
      --program <PROGRAM>            
      --project <PROJECT>            
  -v, --verbose...                   Increase log verbosity printed to stdout (-v=warn, -vv=info, -vvv=debug)
  -q, --quiet                        Suppress non-essential output
      --json                         Output as JSON
      --pretty                       Output JSON with pretty formatting
      --projects-dir <PROJECTS_DIR>  Directory under which Ghidra projects are stored. Overrides config `ghidra_project_dir` and the default location. Note: Ghidra 12.1+ rejects paths containing a dot-prefixed component
      --java-home <JAVA_HOME>        Full JDK home for Ghidra to use (must be a JDK, not a JRE). Overrides config `java_home` and auto-detection
  -h, --help                         Print help
