tests/snapshots/help_snapshot__gd_help.snap
---
source: tests/help_snapshot.rs
expression: "help(&[\"--help\"])"
---
Rust CLI for Ghidra reverse engineering

Usage: gd [OPTIONS] <COMMAND>

Commands:
  query            Universal query command for any data type
  project          Project management commands
  program          Program/binary management commands
  function         Function operations
  strings          String operations
  symbol           Symbol operations
  memory           Memory operations
  x-ref            Cross-reference operations
  type             Type operations
  tag              Function tag operations
  comment          Comment operations
  find             Search operations
  graph            Graph operations
  decompile        Decompile function
  disasm           Disassemble code
  decompile-multi  Decompile several addresses in one bridge round trip
  raw              Send a raw bridge command with a JSON args payload (escape hatch for bridge commands that have no dedicated subcommand, e.g. find_constant, read_memory, write_memory)
  diff             Diff operations
  dump             Dump/export data
  patch            Patch binary
  script           Script execution
  batch            Batch operations
  config           Configuration management
  set-default      Set default values
  summary          Program summary
  stats            Program statistics
  version          Show version information
  doctor           Check Ghidra installation
  init             Initialize configuration
  import           Import a binary into a project
  analyze          Analyze a program
  start            Start the bridge
  stop             Stop the bridge
  restart          Restart the bridge
  status           Show bridge status
  ping             Ping the bridge
  jobs             List active, queued, and recently completed bridge jobs
  cancel           Request cooperative cancellation of a bridge job (defaults to active job)
  setup            Download and setup Ghidra automatically
  rename           Rename a symbol (shortcut for `symbol rename`)
  help             Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose...                   Increase log verbosity printed to stdout (-v=warn, -vv=info, -vvv=debug)
  -q, --quiet                        Suppress non-essential output
      --json                         Output as JSON
      --pretty                       Output JSON with pretty formatting
      --project <PROJECT>            Project name or path (can also be specified per-subcommand)
      --program <PROGRAM>            Program name within the project (can also be specified per-subcommand)
      --projects-dir <PROJECTS_DIR>  Directory under which Ghidra projects are stored. Overrides config `ghidra_project_dir` and the default location. Note: Ghidra 12.1+ rejects paths containing a dot-prefixed component
      --java-home <JAVA_HOME>        Full JDK home for Ghidra to use (must be a JDK, not a JRE). Overrides config `java_home` and auto-detection
  -h, --help                         Print help
  -V, --version                      Print version
