tests/snapshots/help_snapshot__import_help.snap
---
source: tests/help_snapshot.rs
expression: "help(&[\"import\", \"--help\"])"
---
Import a binary into a project

Usage: gd import [OPTIONS] <BINARY>

Arguments:
  <BINARY>  

Options:
      --program <PROGRAM>            
      --project <PROJECT>            
      --no-analyze                   Import only — skip auto-analysis (the program is still persisted)
      --detach                       Return immediately, let bridge continue import in background
  -v, --verbose...                   Increase log verbosity printed to stdout (-v=warn, -vv=info, -vvv=debug)
  -q, --quiet                        Suppress non-essential output
      --json                         Output as JSON
      --pretty                       Output JSON with pretty formatting
      --projects-dir <PROJECTS_DIR>  Directory under which Ghidra projects are stored. Overrides config `ghidra_project_dir` and the default location. Note: Ghidra 12.1+ rejects paths containing a dot-prefixed component
      --java-home <JAVA_HOME>        Full JDK home for Ghidra to use (must be a JDK, not a JRE). Overrides config `java_home` and auto-detection
  -h, --help                         Print help
